--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+#db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -131,7 +131,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-pagesenv
+mbenv
 
 # Spyder project settings
 .spyderproject
